--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,8 @@
 ---
 import HeaderLink from '@/components/HeaderLink.astro';
+
+// TODO: Consideration
+// https://developer.chrome.com/docs/css-ui/sticky-headers
 ---
 
 <header>
