Start playing with devoid styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseHead from '@/components/BaseHead.astro';
-import Footer from '@/components/Footer.astro';
+import ScreenGlow from '@/components/ScreenGlow.astro';
 import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 ---
 
@@ -11,7 +12,9 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
+		<ScreenGlow />
 		<Header />
+		
 		<main>
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<p>
