--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,20 +10,23 @@
   --sitePadding: 2rem;
   --headerHeight: 6rem;
 
-  --font-core: "Atkinson", sans-serif;
+  --fontCore: "JetBrains Mono", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 
-  --clrRed: oklch(0.5732 0.2162 26.18);
-  --clrRedBright: oklch(0.6145 0.2262 26.91);
-  --clrRedDark: oklch(0.4288 0.1455 18.92);
-
-  --clrBlueInvert: oklch(0.4826 0.0916 272.64);
-  --clrBlueDark: oklch(0.2231 0.0424 261.65);
-
-  --clrBlack: oklch(0.1659 0.0312 265.24);
+  --clrPrimary: oklch(0.6559 0.2328 34.52);
+  --clrText: oklch(1 0 0);
+  --clrBg: oklch(from var(--clrPrimary) calc(l * 0.1) c h);
 }
 html {
-  font-family: var(--font-core);
+  font-family: var(--fontCore);
   font-size: 62.5%;
+  color: var(--clrText);
+  background: var(--clrBg);
+  scroll-behavior: smooth;
+}
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
 }
 body {
   display: flex;
@@ -32,6 +35,35 @@ body {
   font-size: 1.6rem;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  /* text-shadow:
+    0 0 0.1rem var(--clrPrimary),
+    0 0 0.25rem var(--clrPrimary),
+    0 0 0.5rem var(--clrPrimary),
+    0 0 1rem var(--clrPrimary),
+    0 0 2.5rem var(--clrPrimary),
+    0 0 5rem var(--clrPrimary); */
+}
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, 0.3) 51%);
+  background-size: 100% 0.4rem;
+  animation: scanlines 1s steps(60) infinite;
+  z-index: 10000;
+  pointer-events: none;
+}
+#screen-glow {
+  position: fixed;
+  inset: 0;
+  box-shadow: inset 0 0 2ch oklch(from var(--clrPrimary) l c h / 0.3);
+  pointer-events: none;
+  z-index: 10001;
+}
+@keyframes scanlines {
+  0% {
+    background-position: 0 0.4rem;
+  }
 }
 header {
   flex-shrink: 0;
@@ -70,7 +102,6 @@ h4,
 h5,
 h6 {
   margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
   line-height: 1.2;
 }
 h1 {
