--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,14 +5,14 @@ import HeaderLink from '@/components/HeaderLink.astro';
 // https://developer.chrome.com/docs/css-ui/sticky-headers
 ---
 
-<header>
+<header id="nav-wrapper">
 	<nav>
 		<ul>
 			<li>
-				<HeaderLink href="/" aria-label="Home">LOGO</HeaderLink>
+				<HeaderLink href="/" aria-label="Home">HOME</HeaderLink>
 			</li>
 			<li>
-				<HeaderLink href="/echoes">Echoes</HeaderLink>
+				<HeaderLink href="/echoes">ECHOES</HeaderLink>
 			</li>
 		</ul>
 	</nav>
