--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,10 +1,10 @@
 ---
-import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '@/components/BaseHead.astro';
 import Footer from '@/components/Footer.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
 import Header from '@/components/Header.astro';
+import ScreenGlow from '@/components/ScreenGlow.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -17,27 +17,26 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	</head>
 
 	<body>
+		<ScreenGlow />
 		<Header />
 		<main>
 			<article>
-				<div class="hero-image">
-					{heroImage && <Image width={1020} height={510} src={heroImage} alt="" />}
-				</div>
+				{heroImage && <img src={heroImage.src} alt="" class="hero-image" decoding="async" fetchpriority="high" />}
 				<div class="prose">
-					<div class="title">
-						<div class="date">
+					<header class="title">
+						<h1>{title}</h1>
+						<span class="date">
 							<FormattedDate date={pubDate} />
 							{
 								updatedDate && (
-									<div class="last-updated-on">
+									<span class="last-updated-on">
 										Last updated on <FormattedDate date={updatedDate} />
-									</div>
+									</span>
 								)
 							}
-						</div>
-						<h1>{title}</h1>
+						</span>
 						<hr />
-					</div>
+					</header>
 					<slot />
 				</div>
 			</article>
