--- a/src/pages/echoes/index.astro
+++ b/src/pages/echoes/index.astro
@@ -2,9 +2,10 @@
 // import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
 import BaseHead from '@/components/BaseHead.astro';
+import ScreenGlow from '@/components/ScreenGlow.astro';
+import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
-import Header from '@/components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 
 const posts = (await getCollection('blog')).sort(
@@ -19,13 +20,14 @@ const posts = (await getCollection('blog')).sort(
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
+		<ScreenGlow />
 		<Header />
 		<main>
 				<ol id="echoes-list">
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/blog/${post.id}/`}>
+								<a href={`/echoes/${post.id}/`}>
 									{/* {post.data.heroImage && (
 										<Image width={720} height={360} src={post.data.heroImage} alt="" />
 									)} */}
