--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import BaseHead from '@/components/BaseHead.astro';
 import Footer from '@/components/Footer.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
 import Header from '@/components/Header.astro';
-import ScreenGlow from '@/components/ScreenGlow.astro';
+// import ScreenGlow from '@/components/ScreenGlow.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -17,7 +17,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	</head>
 
 	<body>
-		<ScreenGlow />
+		<!-- <ScreenGlow /> -->
 		<Header />
 		<main>
 			<article>
