--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,25 @@
 ---
-import BaseHead from '@/components/BaseHead.astro';
+import BaseHead from "@/components/BaseHead.astro";
 // import ScreenGlow from '@/components/ScreenGlow.astro';
-import Header from '@/components/Header.astro';
-import Footer from '@/components/Footer.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
+import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<!-- <ScreenGlow /> -->
-		<Header />
-		<main id="index-main">
-			<h1 class="sr-only">DEVOID</h1>
-			<pre aria-hidden="true">████████▄     ▄████████  ▄█    █▄   ▄██████▄   ▄█  ████████▄
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <!-- <ScreenGlow /> -->
+    <Header />
+    <main>
+      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
+      <div id="index-splash">
+        <h1 class="sr-only">DEVOID</h1>
+        <pre
+          aria-hidden="true">████████▄     ▄████████  ▄█    █▄   ▄██████▄   ▄█  ████████▄
 ███   ▀███   ███    ███ ███    ███ ███    ███ ███  ███   ▀███
 ███    ███   ███    █▀  ███    ███ ███    ███ ███▌ ███    ███
 ███    ███  ▄███▄▄▄     ███    ███ ███    ███ ███▌ ███    ███
@@ -24,8 +27,10 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 ███    ███   ███    █▄  ███    ███ ███    ███ ███  ███    ███
 ███   ▄███   ███    ███ ███    ███ ███    ███ ███  ███   ▄███
 ████████▀    ██████████  ▀██████▀   ▀██████▀  █▀   ████████▀
-			</pre>
-		</main>
-		<Footer />
-	</body>
+				</pre>
+      </div>
+      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
+    </main>
+    <Footer />
+  </body>
 </html>
